--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#7798B7</color>
+    <color name="colorPrimaryDark">#0D263D</color>
+    <color name="colorAccent">#0D263D</color>
 
-    <color name="regularTextColor">#747474</color>
+    <color name="regularTextColor">#F8F8FF</color>
+    <color name="backgroundRegularColor">#0D263D</color>
 </resources>
