--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,14 @@
 
     <FrameLayout
             android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/backgroundRegularColor"
             app:layout_constraintBottom_toTopOf="@+id/navigation"
-            app:layout_constraintVertical_bias="0.0"
-            android:background="@color/backgroundRegularColor">
+            app:layout_constraintEnd_toEndOf="parent"
+            >
 
     </FrameLayout>
 
